Fixed dark mode toggle
+ Added helper class to keep track of adding and removing dark theme toggle

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @import "./index/featuredSection.css";
 
-body.dark-mode {
+body.dark-theme {
   background-color: #151515;
   color: white;
 }
